# decimate-profile

./: .gitignore  CMakeLists.txt  README.md  circulation.h  collapse_edge.h  decimate.h  edge_collapse_is_valid.h  edge_flaps.h  is_edge_manifold.h  main.cpp  min_heap.h
